# datavis

./: CMakeLists.txt  LICENSE  README.md  valid_config_surf.txt
apps/: drawlayers.cpp  drawsurf.cpp
datavis/: DrawLayer.hpp  Surf3D.hpp
src/: DrawLayer.cpp  Surf3D.cpp
